[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Player/dev_player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 7.0

[sub_resource type="RayShape2D" id=1]
length = 31.5

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="State" type="Label" parent="."]
margin_left = -19.0
margin_top = -46.0
margin_right = 16.0
margin_bottom = -32.0
align = 1

[node name="Velocity" type="Label" parent="."]
margin_left = 22.0
margin_top = 10.0
margin_right = 62.0
margin_bottom = 24.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="GroundCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 39 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 200, 0 )
current = true

[node name="PushingCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FallBoost" type="Timer" parent="."]
wait_time = 0.5

[node name="Slowdown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="FlipLabel" type="Label" parent="."]
margin_left = -18.0
margin_top = -72.0
margin_right = 18.0
margin_bottom = -47.0

[connection signal="timeout" from="PushingCooldown" to="." method="_on_PushingCooldown_timeout"]
[connection signal="timeout" from="FallBoost" to="." method="_on_FallBoost_timeout"]
[connection signal="timeout" from="Slowdown" to="." method="_on_Slowdown_timeout"]
